--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@iconify/react": "^4.0.1",
     "@unocss/reset": "^0.46.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
