--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,9 @@
   "extends": "@antfu",
   "rules": {
     "no-console": "off",
-    "no-unused-vars": "warn",
-    "@typescript-eslint/comma-dangle": ["error", "never"]
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/comma-dangle": ["error", "never"],
+    "@typescript-eslint/brace-style": "off"
   }
 }
