--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@iconify/react": "^4.0.1",
     "@unocss/reset": "^0.46.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.29.4",
