:wrench: chore: change default shell to Cmder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "terminal.integrated.defaultProfile.windows": "Cmder",
   "unocss.root": "packages/client",
   "prettier.enable": false,
   "editor.formatOnSave": false,
