--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@types/react-dom": "^18.0.9",
     "@unocss/preset-attributify": "^0.46.5",
     "@unocss/transformer-attributify-jsx": "^0.46.5",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react-swc": "^3.0.1",
     "eslint": "^8.29.0",
     "typescript": "^4.9.4",
     "unocss": "^0.46.5",
-    "vite": "^3.2.5"
+    "vite": "^4.0.1"
   }
 }
