--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --open",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
@@ -23,7 +23,6 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@unocss/preset-attributify": "^0.46.5",
-    "@unocss/transformer-attributify-jsx": "^0.46.5",
     "@vitejs/plugin-react-swc": "^3.0.1",
     "eslint": "^8.29.0",
     "typescript": "^4.9.4",
